--- a/styles.css
+++ b/styles.css
@@ -409,3 +409,126 @@ li {
     font-weight: 500;
     color: #718096;
 }
+
+/* PRICING */
+
+.pricing__container {
+    display: flex;
+    padding: 96px 0;
+    margin: 0 7px;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.pricing__header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.pricing__header h5{
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-size: inherit;
+    text-align: center;
+}
+
+.pricing__header h2 {
+    font-size: 3rem;
+    text-align: center;
+    letter-spacing: 0.025em;
+    font-weight: 900;
+}
+
+.pricing__header p {
+    font-size: 1.125rem;
+    text-align: center;
+    margin-top: 1rem;
+    font-weight: 500;
+    line-height: 1.625;
+    max-width: 36rem;
+}
+
+.plans {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.plan {
+    width: calc(100%/3 - 32px);
+    display: flex;
+    flex-direction: column;
+    margin-top: 64px;
+    margin-right: 32px;
+    border: 2px solid #c4c6c9;
+    border-radius: 12px;
+    padding: 8px 32px;
+}
+
+.plan__header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 0;
+}
+
+.name {
+    font-weight: 700;
+    font-size: 1.25rem;
+    line-height: 1.625;
+    text-transform: uppercase;
+}
+
+.price {
+    font-size: 3rem;
+    font-weight: 700;
+    margin: 0.25rem 0;
+    text-transform: uppercase;
+    line-height: 1.625;
+}
+
+.duration {
+    font-weight: 700;
+    letter-spacing: 0.1em;
+    line-height: 1.625;
+    text-transform: uppercase;
+}
+
+.plan__features {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-top: 2px solid #c4c6c9;
+    padding: 32px;
+}
+
+.mainFeature {
+    font-size: 1.25rem;
+    font-weight: 700;
+    letter-spacing: 0.025em;
+}
+
+.feature {
+    margin-top: 1.25rem;
+    font-weight: 500;   
+}
+
+.plan__action {
+    padding: 32px 64px;
+}
+
+.buy {
+    border-radius: 9999px;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    width: 100%;
+    font-size: 0.875rem;
+    font-weight: 700;
+    border: none;
+}
